# browseterm-server

./: .gitignore  Makefile  README.md  TODO  alembic.ini  app.py  commit_message.txt  ongoing.md  pyproject.toml  requirements.txt
archive/: requirements.txt
archive/src/: auth.py
archive/src/migrations/: README
infra/development/: Dockerfile.development  development.yaml  entrypoint-development.sh
scripts/: build-postgres.sh  build-redis.sh
scripts/development/: development-build.sh  development-setup.sh
src/: alembic.ini  api_handlers.py  auth.py  authconf.py  controller.py  debug_utils.py  handlers.py  template_handlers.py
src/authentication/: __init__.py  authentication_helpers.py  authentication_service.py  oauth_service.py  session_manager.py
src/common/: config.py  grpc_utils.py  utils.py
src/containers/: containers.py  containers_helpers.py  containers_service.py
src/data_models/: auth.py  containers.py  echo.py
src/db_ops/: __init__.py  subscription_db_ops.py  user_db_ops.py
src/handlers/: __init__.py  base_handler.py  googletoken.json  image_options_handler.py  login_flow.md  login_handler.py  login_redirect_handler.py  ping_handler.py  token_exchange_handler.py
src/migrations/: README  env.py
src/models/: __init__.py  commons.py  token.py  user.py
templates/: base.html  github_login_redirect.html  google_login_redirect.html  home.html  js_test.html  login.html  profile.html  subscriptions.html  terminalpage.html  terminals.html
tests/e2e/: test_echo.py
tests/integration/: test_create_container.py  test_socket_ssh_communication.py
(+81 files in other folders)
